--- a/OSCConnect/OSCConnect.csproj
+++ b/OSCConnect/OSCConnect.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Models\Connection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\AweSimBrand.cs" />
     <Compile Include="Views\ConnectMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
