--- a/OSCConnect/OSCConnect.csproj
+++ b/OSCConnect/OSCConnect.csproj
@@ -226,6 +226,8 @@
     <None Include="Resources\OSC_Logo_Icon-Only.jpg" />
     <None Include="Resources\awesim_logo.png" />
     <Content Include="osclogo2.ico" />
+    <None Include="Resources\awesim-ball-sm.png" />
+    <None Include="Resources\awesim-logo-txt.png" />
     <Content Include="Resources\awesim_logo2.png" />
     <None Include="Resources\console.png" />
     <None Include="Resources\officine2.png" />
