Remove Glenn cluster, set Owens as default.

--- a/OSCConnect/App.config
+++ b/OSCConnect/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="OSCConnect.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="AweSimConnect.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,44 @@
         
     <supportedRuntime version="v2.0.50727"/></startup>
     <userSettings>
+        <OSCConnect.Properties.Settings>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Userpass" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IsPassSaved" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SSHHost" serializeAs="String">
+                <value>OWN</value>
+            </setting>
+            <setting name="AutoOpenApp" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DetectClipboard" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CommandLineUpdated" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="LaunchSSHOnImport" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="NewerVersionAvailable" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AutoCheckNewVersion" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="WriteableUser" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="VNCQuality" serializeAs="String">
+                <value>95</value>
+            </setting>
+        </OSCConnect.Properties.Settings>
         <AweSimConnect.Properties.Settings>
             <setting name="Username" serializeAs="String">
                 <value />
